test/tests/compiler/16_characters_and_strings/valid/strings_as_lvalues/adjacent_strings.plx
#  Test that we concatenate adjacent string literal tokens 









pub fn puts(s: string) i32;

pub fn main(none) i32 {
    strings: string = "Hello," " World"
    puts(strings)
    return 0
}
