test/tests/compiler/16_characters_and_strings/invalid_parse/plx1_char_literal_varname.plx
# You can't use a string literal as a variable name

pub fn main(none) i32 {
    'x': i32 = 0
    return 0
}
